install/insoledemo/virtual-services.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: insole
spec:
  hosts:
  - "*"
  gateways:
  - insole-gateway
  http:
  - match:
    - uri:
        prefix: /company
    route:
    - destination:
        host: company
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: company
spec:
  hosts:
  - company
  http:
  - match:
    - uri:
        prefix: /company
    route:
    - destination:
        host: company
        port:
          number: 80       
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product
spec:
  hosts:
  - product
  http:
  - route:
    - destination:
        host: product
---
